Game item text is now visible on glance Overlay now covers item on hover Fixed mobile issues

--- a/src/widgets/game/list/itemV2/components/buttons/style.scss
+++ b/src/widgets/game/list/itemV2/components/buttons/style.scss
@@ -1,9 +1,5 @@
 @import '../../../../../../../node_modules/@bedegaming/bolt/src/widgets/game/list/itemV2/components/buttons/style';
 
 .btn-play {
-  display: none;
-
-  @media ($medium) {
-    display: block;
-  }
+  display: block;
 }
