--- a/src/widgets/game/list/itemV2/components/details/style.scss
+++ b/src/widgets/game/list/itemV2/components/details/style.scss
@@ -8,77 +8,97 @@
   transition-property: box-shadow, transform;
   transition-timing-function: ease;
 
+  .item-container {
+    padding-bottom: 10rem;
+    position: relative;
+  }
+
   .display-name-container {
     align-items: center;
     background-color: rgba(255, 255, 255, 0.95);
-    backdrop-filter: blur(5px);
     border-radius: 0;
     bottom: 0;
     display: flex;
     flex-direction: column;
-    height: 7rem;
+    height: 10rem;
     justify-content: center;
     left: 0;
     padding: 0 1rem;
     position: absolute;
-    transition: height 500ms ease, transform 500ms ease;
-    transform: translateY(100%);
+    transition: max-height 500ms ease, transform 500ms ease;
     width: 100%;
+    z-index: 1;
 
     .display-name {
       @include responsive-type(16, 20);
 
       color: $black;
       font-weight: bold;
+      margin-bottom: 0.5rem;
       overflow: hidden;
-      margin-bottom: 1rem;
       text-align: center;
       text-overflow: ellipsis;
       text-transform: uppercase;
-      transform: translateY(100%);
-      transition: transform 500ms ease;
+      transition: margin 300ms ease;
       white-space: nowrap;
     }
   }
 
   .btn {
-    height: 1rem;
-    transform: scale(0.8);
-    transition-duration: 300ms;
-    transition-property: border-radius, height, transform, width;
-    transition-timing-function: ease;
-
-    span {
-      left: 50%;
-      opacity: 0;
-      position: absolute;
-      top: 50%;
-      transform: translate(-50%, -50%) scale(0.8);
-      transition: opacity 500ms ease, transform 500ms ease;
-    }
+    min-width: 12rem;
+    padding: 1rem 2rem;
   }
 
   @media ($medium) {
+    .item-container {
+      padding-bottom: 7rem;
+    }
+
+    .display-name-container {
+      height: 100%;
+      max-height: 7rem;
+    }
+
+    .btn {
+      height: 1rem;
+      padding: 0;
+      min-width: unset;
+      transform: scale(0.8);
+      transition-duration: 300ms;
+      transition-property: border-radius, height, transform, width;
+      transition-timing-function: ease;
+      width: 1rem;
+
+      span {
+        left: 50%;
+        opacity: 0;
+        position: absolute;
+        top: 50%;
+        transform: translate(-50%, -50%) scale(0.8);
+        transition: opacity 500ms ease, transform 500ms ease;
+      }
+    }
+
     &:hover {
       box-shadow: 0 0.8rem 2rem rgba(22, 20, 20, 0.1);
       transform: translateY(-0.5rem);
 
       .display-name-container {
-        height: 14rem;
-        transform: translateY(0%);
+        max-height: 30rem;
 
         .display-name {
-          transform: translateY(0);
+          margin-bottom: 1rem;
         }
       }
 
       .btn {
         height: 5.2rem;
         transform: scale(1);
+        width: 14.2rem;
 
         span {
-          transform: translate(-50%, -50%) scale(1);
           opacity: 1;
+          transform: translate(-50%, -50%) scale(1);
         }
       }
     }
